[gd_scene load_steps=29 format=3 uid="uid://bdtvwbmx1trc5"]

[ext_resource type="Script" uid="uid://cqr2dwjbhu8q5" path="res://Scene/Monster/monster.gd" id="1_klg5d"]
[ext_resource type="Texture2D" uid="uid://djoi5w5gv6ltr" path="res://Sprites/Monster/Monster_1.png" id="2_02626"]
[ext_resource type="Texture2D" uid="uid://bd0try02y8shb" path="res://Sprites/Monster/Monster_2.png" id="3_20rlx"]
[ext_resource type="Texture2D" uid="uid://btclcpytpd1cg" path="res://Sprites/Monster/Monster_3.png" id="4_a8efm"]
[ext_resource type="Texture2D" uid="uid://xnqr78hb8amd" path="res://Sprites/Monster/Monster_4.png" id="5_1pc2f"]
[ext_resource type="Texture2D" uid="uid://7pi4hyqo5bpy" path="res://Sprites/Monster/Monster_5.png" id="6_hco2p"]
[ext_resource type="AudioStream" uid="uid://j8odnqw5dea6" path="res://Sounds/dark_dying.mp3" id="7_20rlx"]
[ext_resource type="Texture2D" uid="uid://cavemycsw5et1" path="res://Sprites/Monster_end/Monster_end_1.png" id="7_bs8p1"]
[ext_resource type="AudioStream" uid="uid://d16uyewfxerer" path="res://Sounds/dark_moving.mp3" id="8_a8efm"]
[ext_resource type="Texture2D" uid="uid://3kmw6agto387" path="res://Sprites/Monster_end/Monster_end_2.png" id="8_qfkgg"]
[ext_resource type="Texture2D" uid="uid://dlw2oo56vh4og" path="res://Sprites/Monster_end/Monster_end_3.png" id="9_w8l62"]
[ext_resource type="Texture2D" uid="uid://bv2o3iqotl2ef" path="res://Sprites/Monster_end/Monster_end_4.png" id="10_ctss8"]
[ext_resource type="Texture2D" uid="uid://de417kvaspr8e" path="res://Sprites/Monster_end/Monster_end_5.png" id="11_m4ifg"]
[ext_resource type="Texture2D" uid="uid://7ts3cxpy0ija" path="res://Sprites/Monster_end/Monster_end_6.png" id="12_cjfyd"]
[ext_resource type="Texture2D" uid="uid://vd8fl2jbu0kq" path="res://Sprites/Monster_end/Monster_end_7.png" id="13_a2pm2"]
[ext_resource type="Texture2D" uid="uid://ocsuj3pc2810" path="res://Sprites/Monster_end/Monster_end_8.png" id="14_nyndn"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tlj3c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_02626")
}, {
"duration": 1.0,
"texture": ExtResource("3_20rlx")
}, {
"duration": 1.0,
"texture": ExtResource("4_a8efm")
}, {
"duration": 1.0,
"texture": ExtResource("5_1pc2f")
}, {
"duration": 1.0,
"texture": ExtResource("6_hco2p")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_snjob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_bs8p1")
}, {
"duration": 1.0,
"texture": ExtResource("8_qfkgg")
}, {
"duration": 1.0,
"texture": ExtResource("9_w8l62")
}, {
"duration": 1.0,
"texture": ExtResource("10_ctss8")
}, {
"duration": 1.0,
"texture": ExtResource("11_m4ifg")
}, {
"duration": 1.0,
"texture": ExtResource("12_cjfyd")
}, {
"duration": 1.0,
"texture": ExtResource("13_a2pm2")
}, {
"duration": 1.0,
"texture": ExtResource("14_nyndn")
}],
"loop": false,
"name": &"end",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a8efm"]
radius = 38.0132

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_klg5d"]
load_path = "res://.godot/imported/light_2.png-d2c8f442ab563cba09d0fc1a925274d1.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_oqa3l"]
load_path = "res://.godot/imported/light_2.png-d2c8f442ab563cba09d0fc1a925274d1.ctex"

[sub_resource type="CircleShape2D" id="CircleShape2D_g35ut"]
radius = 73.0616

[sub_resource type="Animation" id="Animation_20rlx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monster_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.243215]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Monster_sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Audio_die:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_02626"]
resource_name = "die"
length = 1.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"die"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"max_speed"
}, {
"args": [],
"method": &"zero_speed"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Monster_sprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8, 1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.243215, 0.193732, -0.193732, 0.193732, -0.144862, 0.144862, -0.144862, 0.120428, -0.120428]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Monster_sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.3, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Audio_die:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_20rlx"]
_data = {
&"RESET": SubResource("Animation_20rlx"),
&"die": SubResource("Animation_02626")
}

[sub_resource type="Animation" id="Animation_qfkgg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monster_end:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Monster_end:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.242601]
}

[sub_resource type="Animation" id="Animation_bs8p1"]
resource_name = "the_end_monster"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Monster_end:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Monster_end:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.39, 1.6, 1.8, 2, 2.19, 2.4, 2.6, 2.8, 2.99, 3.2, 3.4, 3.6, 3.79, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.242601, 0.0680678, 0.242601, 0.417134, 0.242601, 0.0680678, 0.242601, 0.417134, 0.242601, 0.0680678, 0.242601, 0.417134, 0.242601, 0.0680678, 0.242601, 0.417134, 0.242601, 0.0680678, 0.242601, 0.417134, 0.242601]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"the_end"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qfkgg"]
_data = {
&"RESET": SubResource("Animation_qfkgg"),
&"the_end_monster": SubResource("Animation_bs8p1")
}

[node name="Monster" type="CharacterBody2D" groups=["Monster"]]
collision_layer = 8
collision_mask = 22
script = ExtResource("1_klg5d")

[node name="Monster_sprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
rotation = 0.243215
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_tlj3c")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.0544861

[node name="Monster_end" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
rotation = 0.242601
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_snjob")
animation = &"end"

[node name="Collision_monster" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
visible = false
shape = SubResource("CircleShape2D_a8efm")
disabled = true

[node name="Light" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(43, -22)

[node name="Light" type="PointLight2D" parent="Light"]
modulate = Color(1, 1, 1, 0.552941)
position = Vector2(-1.52588e-05, -0.999998)
rotation = 3.14159
scale = Vector2(0.1, 0.1)
color = Color(1, 1, 1, 0.541176)
shadow_filter = 2
shadow_filter_smooth = 3.0
texture = SubResource("CompressedTexture2D_klg5d")

[node name="Shadow" type="PointLight2D" parent="Light"]
modulate = Color(1, 1, 1, 0.552941)
position = Vector2(-1.52588e-05, -0.999998)
rotation = 3.14159
scale = Vector2(0.1, 0.1)
color = Color(1, 1, 1, 0.541176)
energy = 0.7
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 0.2
texture = SubResource("CompressedTexture2D_oqa3l")

[node name="Area_die" type="Area2D" parent="."]
unique_name_in_owner = true
visible = false
collision_layer = 8
collision_mask = 18

[node name="Collision_area" type="CollisionShape2D" parent="Area_die"]
shape = SubResource("CircleShape2D_g35ut")

[node name="Animation_Shake" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_20rlx")
}

[node name="Audio_die" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("7_20rlx")
max_distance = 1500.0

[node name="Audio_move" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("8_a8efm")
volume_db = -10.0
max_distance = 1500.0

[node name="Animation_end" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_qfkgg")
}

[connection signal="area_entered" from="Area_die" to="." method="_on_area_die_area_entered"]
[connection signal="area_exited" from="Area_die" to="." method="_on_area_die_area_exited"]
[connection signal="body_entered" from="Area_die" to="." method="_on_area_die_body_entered"]
